Added cursor styling for recipe image links

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -29,3 +29,8 @@ body {
   background-color: #04AA6D;
   color: white;
 }
+
+/* Turns the cursor over the recipe images into a pointer */
+.recipeImg {
+  cursor: pointer;
+}
