--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,3 +34,9 @@ body {
 .recipeImg {
   cursor: pointer;
 }
+
+/* Formats the images within the response section */
+#showResponse img {
+  height: 350px;
+  width: auto;
+}
