add favorites section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,3 +34,12 @@ body {
 .recipeImg {
   cursor: pointer;
 }
+
+/* Column design for favorites page */
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 50%;
+}
