--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,28 +4,41 @@ body {
 
 /* Add a black background color to the top navigation */
 .topnav {
+  display: flex;
   background-color: #333;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
+/* style the title box */
+.siteTitle {
+  display: flex;
   float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 1.5rem;
+}
+
+/* Style the links inside the navigation bar */
+.navbar-links a {
+  display: flex;
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 1.5rem;
 }
 
 /* Change the color of links on hover */
-.topnav a:hover {
+.navbar-links a:hover {
   background-color: #ddd;
   color: black;
 }
 
 /* Add a color to the active/current link */
-.topnav a.active {
+.navbar-links a.active {
   background-color: #04AA6D;
   color: white;
 }
@@ -33,4 +46,34 @@ body {
 /* Turns the cursor over the recipe images into a pointer */
 .recipeImg {
   cursor: pointer;
+}
+
+/* hamburger button */
+
+.menu-button {
+  position: absolute;
+  top: 1.5rem;
+  right: 1.5rem;
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.menu-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+@media (max-width: 600px) {
+  .menu-button {
+    display: flex;
+  }
+
+  .navbar-links {
+    display: none;
+  }
 }
