--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -34,3 +34,11 @@ body {
 .recipeImg {
   cursor: pointer;
 }
+
+.header {
+  padding: 60px;
+  text-align: center;
+  background: #1abc9c;
+  color: white;
+  font-size: 30px;
+}
