--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -120,7 +120,11 @@ body {
   flex: 50%;
 }
 
-/* Postit Note styling 
+#favorites {
+  text-align: center;
+}
+
+/* Postit Note styling */
 #postit {
   line-height: 1;
   text-align: center;
@@ -137,13 +141,13 @@ body {
   border-bottom-right-radius: 60px 5px;
   display: inline-block;
   background: #ffff88; /*Old browsers */
-  /*background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%); /* FF3.6+ */
-  /*background: -webkit-gradient(linear, left top, right bottom, color-stop(81%,#ffff88), color-stop(82%,#ffff88), color-stop(82%,#ffff88), color-stop(100%,#ffffc6)); /* Chrome,Safari4+ */
-  /*background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Chrome10+,Safari5.1+ */
-  /*background: -o-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Opera 11.10+ */
-  /*background: -ms-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* IE10+ */
-  /*background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* W3C */
-  /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='ffffc6', GradientType=1 );
+  background: -moz-linear-gradient(-45deg, #ffff88 81%, #ffff88 82%, #ffff88 82%, #ffffc6 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(81%,#ffff88), color-stop(82%,#ffff88), color-stop(82%,#ffff88), color-stop(100%,#ffffc6)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(-45deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* IE10+ */
+  background: linear-gradient(135deg, #ffff88 81%,#ffff88 82%,#ffff88 82%,#ffffc6 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff88', endColorstr='ffffc6', GradientType=1 );
 }
 
 #postit:after {
@@ -162,30 +166,14 @@ body {
   transform: matrix(-1, -0.1, 0, 1, 0, 0);
 }
 
-.rotate {
-  background-color: transparent;
-  transform: rotate(5deg);
-}*/
-
-#postit {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 8px;
-  padding-right: 8px;
-  background-color: rgb(227, 255, 204);
-  box-shadow: 0px 2px 2px 3px #dadada;
-  -webkit-transform: rotate(-4deg);
-  -o-transform: rotate(-4deg);
-  -moz-transform: rotate(-4deg);
-  max-width: 240px;
-  height: 240px;
-  position: relative;
-  right: 28%;
-  text-align: center;
+#shoppingInput {
+  text-align: justify;
+  position: absolute;
+  margin-left: 50%;
 }
 
-/* Formats the images within the response section */
-#showResponse img {
-  height: 350px;
-  width: auto;
+#submitInput {
+  text-align: center;
+  margin: center;
+  display: center;
 }
