--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -109,14 +109,27 @@ body {
 
 #showResponse {
   display: flex;
+  align-items: flex-start;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
+#showResponse li {
+  list-style: none;
+  text-align: center;
+  word-wrap: normal;
+  margin-bottom: 1rem;
+  font-family:Arial, Helvetica, sans-serif;
+}
 
 .recipeImg {
   cursor: pointer;
-  width: 200px;
+  width: 300px;
+  border: black;
+  border-style: solid;
+  border-width: 3px;
 }
+
 
 /* Column design for favorites page */
 /* .row {
