--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -107,6 +107,23 @@ body {
   }
 }
 
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#addIngredientButton {
+  margin: 1rem;
+}
+
 #showResponse {
   display: flex;
   align-items: flex-start;
@@ -117,9 +134,10 @@ body {
 #showResponse li {
   list-style: none;
   text-align: center;
-  word-wrap: normal;
+  /* word-wrap: normal; */
   margin-bottom: 1rem;
   font-family:Arial, Helvetica, sans-serif;
+  font-size: 15px;
 }
 
 .recipeImg {
