--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -107,6 +107,10 @@ body {
   }
 }
 
+.welcome {
+  text-align: center;
+}
+
 .filters {
   display: flex;
   align-items: center;
@@ -124,17 +128,28 @@ body {
   margin: 1rem;
 }
 
+#listOfIngredients {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+#listOfIngredients button {
+  margin-left: .5rem;
+  margin-right: 2rem;
+}
+
 #showResponse {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
   justify-content: space-between;
+  flex-basis: 30%;
 }
 
 #showResponse li {
   list-style: none;
   text-align: center;
-  /* word-wrap: normal; */
   margin-bottom: 1rem;
   font-family:Arial, Helvetica, sans-serif;
   font-size: 15px;
