--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -153,6 +153,7 @@ body {
   margin-bottom: 1rem;
   font-family:Arial, Helvetica, sans-serif;
   font-size: 15px;
+  overflow: hidden;
 }
 
 .recipeImg {
