--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -139,6 +139,7 @@ body {
 
 .welcome {
   text-align: center;
+  font-family: Silkscreen;
 }
 
 .filters {
@@ -146,12 +147,15 @@ body {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2rem;
+  font-family: Silkscreen;
+  font-size: 14px;
 }
 
 .menu {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-family: Silkscreen;
 }
 
 #addIngredientButton {
