--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,12 @@ body {
 }
 
 #subtitle {
-  font-weight: 700;
+  display: inline-flex;
+  font-weight: 600;
+  padding-left: 150px;
+  font-size: 22px;
+  
+
 
 }
 
