--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,7 +52,7 @@ body {
 
 h1 {
   display: inline-flex;
-  font-size: 9rem;
+  font-size: 8`rem;
   margin: 0 auto;
   font-family: Nabla;
   opacity: 75%;
