--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,11 +36,12 @@ body {
   display: flex;
   margin: 0 auto;
   padding-top: 20px;
+
 }
 
 .navbar {
   display: flex;
-  padding-right: 45px;
+  padding: auto auto;
   margin-top: 30px;
   margin-bottom: 30px;
   position: relative;
@@ -61,6 +62,11 @@ h1 {
   border-radius: 20px;
 }
 
+@media only screen and (max-width: 800px) {
+  h1 {
+    font-size:6rem;
+  }
+}
 
 
 .g { 
