add font to input for list

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -371,6 +371,10 @@ p {
   margin-left: 50%;
 }
 
+#shoppingList {
+  font-family: "homemade apple"
+}
+
 .rotate {
   background-color: transparent;
   transform: rotate(5deg);
