--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -312,9 +312,9 @@ input.option{
 .recipeImg {
   cursor: pointer;
   width: 300px;
-  /* border: black;
+  border-bottom: black;
   border-style: solid;
-  border-width: 3px; */
+  border-width: 3px;
 }
 
 p {
