--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Fredoka+One&family=Homemade+Apple&family=Hurricane&family=Meddon&family=Nabla&family=Righteous&family=Silkscreen&family=Yatra+One&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital@1&family=Montserrat:wght@500&family=Raleway:ital,wght@0,300;1,300;1,500;1,700&display=swap');
 
 * {
   box-sizing: border-box;
@@ -15,10 +16,13 @@ body {
   background-image: url("https://thumbs.dreamstime.com/b/seamless-pattern-cartoon-food-funny-comic-eggs-bacon-sandwich-croissant-fruits-milk-apple-orange-fork-spoon-vector-91210881.jpg");
   /* display: flex; */
   /* justify-content: center; */
+  font-family: 'Raleway', sans-serif;
 }
 
 #formdiv {
-  font-family: 'Silkscreen', cursive;
+  /* font-family: 'Silkscreen', cursive; */
+  font-family: 'Raleway', sans-serif;
+}
 .layer {
   display: flex; 
   flex-direction: column;
@@ -30,8 +34,9 @@ body {
   margin-left: 20%;
   margin-right: 20%;
   margin-top: 10%;
-  background-color: rgba(247, 234, 88, 0.92);
+  background-color: rgb(250, 250, 245);
   text-align: center;
+  font-family: 'Raleway', sans-serif;
 }
 
 #subtitle {
@@ -42,7 +47,9 @@ body {
 }
 
 #listOfIngredients {
-  font-family: Hurricane;
+  /* font-family: Hurricane; */
+  /* font-family: 'Cormorant', serif; */
+  font-family: 'Raleway', sans-serif;
   font-size: 30px;
 }
 
@@ -67,8 +74,9 @@ body {
   align-items: center;
   background-color: green;
   color: black;
-  border-radius: 23%;
-  font-family: Silkscreen;
+  /* border-radius: 23%; */
+  /* font-family: Silkscreen; */
+  font-family: 'Raleway', sans-serif;
 }
 
 h1 {
@@ -280,7 +288,8 @@ h1 {
 
 .welcome {
   text-align: center;
-  font-family: Silkscreen;
+  /* font-family: Silkscreen; */
+  font-family: 'Raleway', sans-serif;
 }
 
 #ingredientInput {
@@ -293,7 +302,8 @@ h1 {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2rem;
-  font-family: Silkscreen;
+  /* font-family: Silkscreen; */
+  font-family: 'Raleway', sans-serif;
   font-size: 14px;
 }
 
@@ -301,7 +311,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: Silkscreen;
+  /* font-family: Silkscreen; */
+  font-family: 'Raleway', sans-serif;
 }
 
 .option {
@@ -347,7 +358,8 @@ input.option {
   list-style: none;
   text-align: center;
   margin-bottom: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Raleway', sans-serif;
   font-size: 15px;
   overflow: hidden;
 }
@@ -370,9 +382,9 @@ p {
   margin: 10px 20px;
   background: #fff;
   border: black;
-  border-style: solid;
+  /* border-style: solid; */
   border-width: 3px;
-  /* box-shadow: 0 0 15px black; */
+  box-shadow: 0 0 15px black;
 }
 
 .top {
@@ -386,7 +398,8 @@ p {
 } */
 
 .about {
-  font-family: Silkscreen;
+  /* font-family: Silkscreen; */
+  font-family: 'Raleway', sans-serif;
 
 }
 
@@ -416,7 +429,8 @@ p {
   position: relative;
   border: 1px solid #e8e8e8;
   border-top: 30px solid #fdfd86;
-  font-family: 'Reenie Beanie';
+  /* font-family: 'Reenie Beanie'; */
+  font-family: 'Raleway', sans-serif;
   font-size: 22px;
   border-bottom-right-radius: 60px 5px;
   display: inline-block;
