change font to your saved favorites on favorites page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -479,9 +479,10 @@ input.option {
   width: min-content;
 }
 
-h1.fave {
+#fave {
   font-size: 55px;
   text-align: center;
+  font-family: "Fredoka One";
 }
 
 #shoppingList {
